added routing functionality

--- a/nearbytowns/templates/towns/index.html
+++ b/nearbytowns/templates/towns/index.html
@@ -40,11 +40,12 @@
         </div>
     </nav>
     <!--End Navbar-->
-    
+   
+    </div>
             <div>
                 {{ m|safe }}
             </div>
-      
+    
 
     <!-- Optional JavaScript; choose one of the two! -->
 
